--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.mvc.view.suffix=.jsp
 security.ignored=/css/**,/js/**,/images/**,/font/**
 
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SD_57_DATN;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=;encrypt=true;trustServerCertificate=true;
 
 spring.datasource.username=sa   
 spring.datasource.password=123
