--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ security.ignored=/css/**,/js/**,/images/**,/font/**
 
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SD_57_DATN;encrypt=true;trustServerCertificate=true;
 
-spring.datasource.username=sa   
-spring.datasource.password=123
+spring.datasource.username=sa
+spring.datasource.password=nguyenvangth92
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 logging.level.org.hibernate.SQL=DEBUG
