--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.mvc.view.suffix=.jsp
 security.ignored=/css/**,/js/**,/images/**,/font/**
 
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SD_41_DATN;encrypt=true;trustServerCertificate=true;
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=SD_57_DATN;encrypt=true;trustServerCertificate=true;
 
-spring.datasource.username=sa
-spring.datasource.password=123
+spring.datasource.username=
+spring.datasource.password=
 
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 logging.level.org.hibernate.SQL=DEBUG
